@@ -1441,9 +1441,9 @@ In the latter case you can also use a link, e.g. [[{{ns:Special}}:Export/{{Media
 'allmessagesname' => 'Name',
 'allmessagesdefault' => 'Default text',
 'allmessagescurrent' => 'Current text',
-'allmessagestext'	=> 'This is a list of system messages available in the MediaWiki: namespace.',
+'allmessagestext'	=> 'This is a list of system messages available in the MediaWiki namespace.',
 'allmessagesnotsupportedUI' => 'Your current interface language <b>$1</b> is not supported by Special:Allmessages at this site.',
-'allmessagesnotsupportedDB' => 'Special:Allmessages cannot be used because wgUseDatabaseMessages is off.',
+'allmessagesnotsupportedDB' => '\'\'\'Special:Allmessages\'\'\' cannot be used because \'\'\'$wgUseDatabaseMessages\'\'\' is switched off.',
 'allmessagesfilter' => 'Message name filter:',
 'allmessagesmodified' => 'Show only modified',
 
